--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@fontsource/poppins": "^5.1.0",
     "@fontsource/style-script": "^5.1.0",
     "@fontsource/sulphur-point": "^5.1.0",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.0.1",
+    "@types/react-dom": "^18.0.2",
     "astro": "^5.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "motion": "^11.13.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-parallax-tilt": "^1.7.266",
     "tailwindcss": "^3.4.16"
   }
