--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-parallax-tilt": "^1.7.266",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "typewriter-effect": "^2.21.0"
   }
 }
