--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/vercel": "^8.0.1",
     "@fontsource/poppins": "^5.1.0",
     "@fontsource/style-script": "^5.1.0",
     "@fontsource/sulphur-point": "^5.1.0",
     "@types/react": "^18.0.1",
     "@types/react-dom": "^18.0.2",
     "astro": "^5.0.5",
+    "date-fns": "^4.1.0",
     "motion": "^11.14.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
